tests/lean/evalSorry.lean.expected.out
1
evalSorry.lean:5:33-5:34: error: application type mismatch
  f x
argument
  x
has type
  String : Type
but is expected to have type
  Nat : Type
evalSorry.lean:7:0-7:15: error: cannot evaluate expression that depends on the `sorry` axiom.
Use `#eval!` to evaluate nevertheless (which may cause lean to crash).
evalSorry.lean:11:0-11:15: error: cannot evaluate expression that depends on the `sorry` axiom.
Use `#eval!` to evaluate nevertheless (which may cause lean to crash).
